logs/dag_id=postgres_operator_dag_v1.3/run_id=manual__2023-02-14T13:36:36.552504+00:00/task_id=insert_into_postgres_table/attempt=3.log
[2023-02-14T13:39:54.829+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag_v1.3.insert_into_postgres_table manual__2023-02-14T13:36:36.552504+00:00 [queued]>
[2023-02-14T13:39:54.843+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag_v1.3.insert_into_postgres_table manual__2023-02-14T13:36:36.552504+00:00 [queued]>
[2023-02-14T13:39:54.844+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-02-14T13:39:54.844+0000] {taskinstance.py:1280} INFO - Starting attempt 3 of 7
[2023-02-14T13:39:54.844+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-02-14T13:39:54.857+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): insert_into_postgres_table> on 2023-02-14 13:36:36.552504+00:00
[2023-02-14T13:39:54.863+0000] {standard_task_runner.py:55} INFO - Started process 6241 to run task
[2023-02-14T13:39:54.867+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag_v1.3', 'insert_into_postgres_table', 'manual__2023-02-14T13:36:36.552504+00:00', '--job-id', '83', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmpauou9tdk']
[2023-02-14T13:39:54.871+0000] {standard_task_runner.py:83} INFO - Job 83: Subtask insert_into_postgres_table
[2023-02-14T13:39:54.935+0000] {task_command.py:388} INFO - Running <TaskInstance: postgres_operator_dag_v1.3.insert_into_postgres_table manual__2023-02-14T13:36:36.552504+00:00 [running]> on host 01550fe0586b
[2023-02-14T13:39:55.006+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=tlysenko
AIRFLOW_CTX_DAG_ID=postgres_operator_dag_v1.3
AIRFLOW_CTX_TASK_ID=insert_into_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-02-14T13:36:36.552504+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-02-14T13:36:36.552504+00:00
[2023-02-14T13:39:55.008+0000] {sql.py:254} INFO - Executing: 
            INSERT INTO dag_runs(dt, dag_id) values(2023-02-14, postgres_operator_dag_v1.3)
        
[2023-02-14T13:39:55.019+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-02-14T13:39:55.154+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-02-14T13:39:55.161+0000] {sql.py:375} INFO - Running statement: 
            INSERT INTO dag_runs(dt, dag_id) values(2023-02-14, postgres_operator_dag_v1.3)
        , parameters: None
[2023-02-14T13:39:55.163+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ".3"
LINE 2: ...s(dt, dag_id) values(2023-02-14, postgres_operator_dag_v1.3)
                                                                    ^

[2023-02-14T13:39:55.173+0000] {taskinstance.py:1323} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_operator_dag_v1.3, task_id=insert_into_postgres_table, execution_date=20230214T133636, start_date=20230214T133954, end_date=20230214T133955
[2023-02-14T13:39:55.181+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 83 for task insert_into_postgres_table (syntax error at or near ".3"
LINE 2: ...s(dt, dag_id) values(2023-02-14, postgres_operator_dag_v1.3)
                                                                    ^
; 6241)
[2023-02-14T13:39:55.203+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-02-14T13:39:55.219+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
